Ported changed made on trunks to this branch
git-svn-id: https://svn.apache.org/repos/asf/directory/shared/branches/shared-value@1769370 13f79535-47bb-0310-9956-ffa450edef68